# event_chain_mining

./: .gitignore  main.py  pyproject.toml
data/: extract.py  load.py  transform.py
data/values/: Event.py  EventChain.py
